--- a/kubernetes/home/flux/repositories/helm/openebs-mayastor.yaml
+++ b/kubernetes/home/flux/repositories/helm/openebs-mayastor.yaml
@@ -2,8 +2,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: openebs-jiva
+  name: openebs-mayastor
   namespace: flux-system
 spec:
   interval: 1m0s
-  url: https://openebs.github.io/jiva-operator
+  url: https://openebs.github.io/mayastor-extensions/
