--- a/kubernetes/home/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/home/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 30m
   dependsOn:
-    - name: openebs-jiva
+    - name: openebs-mayastor
       namespace: storage
   chart:
     spec:
@@ -21,7 +21,7 @@ spec:
   values:
     defaultPodOptions:
       nodeSelector:
-        openebs.io/data-plane: "true"
+        openebs.io/engine: mayastor
     controllers:
       main:
         pod:
@@ -96,6 +96,6 @@ spec:
       config:
         enabled: true
         accessMode: ReadWriteOnce
-        storageClass: openebs-jiva-csi-default
+        storageClass: openebs-mayastor-dual-replica
         globalMounts:
           - path: /config
