--- a/kubernetes/home/apps/monitoring/changedetection/helmrelease.yaml
+++ b/kubernetes/home/apps/monitoring/changedetection/helmrelease.yaml
@@ -15,12 +15,12 @@ spec:
         name: bjw-s
         namespace: flux-system
   dependsOn:
-    - name: openebs-jiva
+    - name: openebs-mayastor
       namespace: storage
   values:
     defaultPodOptions:
       nodeSelector:
-        openebs.io/data-plane: "true"
+        openebs.io/engine: mayastor
     controllers:
       main:
         pod:
@@ -59,7 +59,7 @@ spec:
         enabled: true
         accessMode: ReadWriteOnce
         size: 1Gi
-        storageClass: openebs-jiva-csi-default
+        storageClass: openebs-mayastor-dual-replica
         advancedMounts:
           main:
             main:
