--- a/kubernetes/home/apps/home-automation/mosquitto/helmrelease.yaml
+++ b/kubernetes/home/apps/home-automation/mosquitto/helmrelease.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 30m
   dependsOn:
-    - name: openebs-jiva
+    - name: openebs-mayastor
       namespace: storage
   chart:
     spec:
@@ -22,7 +22,7 @@ spec:
   values:
     defaultPodOptions:
       nodeSelector:
-        openebs.io/data-plane: "true"
+        openebs.io/engine: mayastor
     controllers:
       main:
         pod:
@@ -77,7 +77,7 @@ spec:
       data:
         enabled: true
         accessMode: ReadWriteOnce
-        storageClass: openebs-jiva-csi-default
+        storageClass: openebs-mayastor-dual-replica
         size: 512Mi
         advancedMounts:
           main:
