--- a/kubernetes/home/apps/media/clusterplex/helmrelease.yaml
+++ b/kubernetes/home/apps/media/clusterplex/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
   values:
     defaultPodOptions:
       nodeSelector:
-        openebs.io/data-plane: "true"
+        openebs.io/engine: mayastor
     controllers:
       main:
         pod:
@@ -154,7 +154,7 @@ spec:
       config-pms:
         enabled: true
         accessMode: ReadWriteOnce
-        storageClass: openebs-jiva-csi-default
+        storageClass: openebs-mayastor-dual-replica
         size: 25Gi
         advancedMounts:
           pms:
