--- a/kubernetes/home/apps/storage/kustomization.yaml
+++ b/kubernetes/home/apps/storage/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-#  - ./openebs-jiva/ks.yaml
+#  - ./openebs-mayastor/ks.yaml
   - ./openebs-mayastor/ks.yaml
