--- a/kubernetes/home/apps/storage/openebs-jiva/config/jivavolumepolicy.yaml
+++ b/kubernetes/home/apps/storage/openebs-jiva/config/jivavolumepolicy.yaml
@@ -8,7 +8,7 @@ spec:
   target:
     replicationFactor: 3
     nodeSelector:
-      openebs.io/data-plane: "true"
+      openebs.io/engine: mayastor
   replica:
     nodeSelector:
-      openebs.io/data-plane: "true"
+      openebs.io/engine: mayastor
