--- a/kubernetes/home/apps/home-automation/home-assistant/app/postgresql.yaml
+++ b/kubernetes/home/apps/home-automation/home-assistant/app/postgresql.yaml
@@ -14,3 +14,7 @@ spec:
     size: 10Gi
   monitoring:
     enablePodMonitor: true
+  resources:
+    limits:
+      hugepages-2Mi: 512Mi
+      memory: 512Mi
