increase pvc config size

--- a/kubernetes/home/apps/download/prowlarr/helmrelease.yaml
+++ b/kubernetes/home/apps/download/prowlarr/helmrelease.yaml
@@ -76,3 +76,4 @@ spec:
         enabled: true
         accessMode: ReadWriteOnce
         storageClass: openebs-mayastor-dual-replica
+        size: 2Gi
