--- a/kubernetes/home/apps/download/radarr/helmrelease.yaml
+++ b/kubernetes/home/apps/download/radarr/helmrelease.yaml
@@ -79,6 +79,7 @@ spec:
         enabled: true
         accessMode: ReadWriteOnce
         storageClass: openebs-mayastor-dual-replica
+        size: 2Gi
       movie:
         enabled: true
         type: nfs
