--- a/kubernetes/home/apps/download/recyclarr/helmrelease.yaml
+++ b/kubernetes/home/apps/download/recyclarr/helmrelease.yaml
@@ -52,6 +52,7 @@ spec:
         enabled: true
         accessMode: ReadWriteOnce
         storageClass: openebs-mayastor-dual-replica
+        size: 2Gi
         advancedMounts:
           main:
             main:
