--- a/kubernetes/home/apps/storage/kustomization.yaml
+++ b/kubernetes/home/apps/storage/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
   - namespace.yaml
 #  - ./openebs-mayastor/ks.yaml
-  - ./openebs-mayastor/ks.yaml
+#  - ./openebs-mayastor/ks.yaml
